Fix eval arrow being clipped in folded docs

--- a/src/css/unison-share/page/project-contribution-changes-page.css
+++ b/src/css/unison-share/page/project-contribution-changes-page.css
@@ -56,6 +56,7 @@
     top: 0;
     bottom: 0;
     width: 2rem;
+    border-radius: var(--border-radius-base);
     background: linear-gradient(
       to right,
       transparent,
